# lvgl-st7735

./: .gitignore  CMakeLists.txt  README.MD  component.mk  idf_component.yml  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
lvgl_tft/: disp_driver.c  disp_driver.h  disp_spi.c  disp_spi.h  esp_lcd_backlight.c  st7735s.c  st7735s.h
